blueprints/orion-monitor-svc.archived/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-monitor-svc
  namespace: orion
  labels:
    app: orion-monitor-svc
    component: monitor-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3005
      protocol: TCP
  selector:
    app: orion-monitor-svc
---
apiVersion: v1
kind: Service
metadata:
  name: orion-monitor-svc-nodeport
  namespace: orion
  labels:
    app: orion-monitor-svc
    component: monitor-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 3005
      targetPort: 3005
      nodePort: 30055
      protocol: TCP
  selector:
    app: orion-monitor-svc
